tests/samples/invalid/assign_to_view_parameter.pn
extern fn foo(x: []u8)
{
	x[0] = 1;
}

fn main()
{
	var x: []u8 = [0x0];
	foo(x);
}
